# uvkube

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  uvkube.yaml
.github/workflows/: ci.yml
src/uvkube/: main.py
src/uvkube/ansible/: inventory.py  runner.py
src/uvkube/ansible/playbooks/: k3s_control_plane.yml  k3s_workers.yml
src/uvkube/commands/: infra.py
src/uvkube/config/: models.py
src/uvkube/providers/: base.py  enums.py  hetzner.py  in_memory.py
tests/ansible/: test_inventory.py
tests/config/: test_models.py
tests/providers/: test_in_memory.py
